--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,11 @@
         <item name="android:statusBarColor">@android:color/white</item>
     </style>
 
+    <style name="AppTheme.DarkStatusBar" parent="AppTheme">
+        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+        <item name="android:statusBarColor">@color/colorPrimary</item>
+    </style>
+
     <style name="AppTheme.Toolbar">
         <item name="actionMenuTextColor">@color/colorPrimaryDark</item>
         <item name="android:actionMenuTextAppearance">@style/AppTheme.Toolbar.TitleText</item>
