--- a/app/src/main/res/layout/activity_login_with_mobile_otp.xml
+++ b/app/src/main/res/layout/activity_login_with_mobile_otp.xml
@@ -1,9 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".login.mobile.LoginWithMobileOTPActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/toolbar"/>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:padding="16dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:text="@string/lwm_otp_title"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginVertical="32dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <com.chaos.view.PinView
+                style="@style/PinWidget.PinView"
+                android:id="@+id/lwmo_code"
+                android:inputType="phone"
+                android:digits="0123456789"
+                app:itemCount="6"
+                app:itemHeight="60dp"
+                app:itemSpacing="4dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textStyle="bold"
+                app:lineColor="@android:color/transparent"
+                app:cursorColor="@color/colorPrimaryDark"
+                android:cursorVisible="true"
+                android:itemBackground="@color/colorFieldBG"
+                app:itemRadius="16dp"
+                app:viewType="rectangle"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/AppTheme.Button.UnelevatedButton"
+                app:cornerRadius="24dp"
+                android:id="@+id/lwmo_verify_btn"
+                android:text="@string/verify"
+                android:paddingVertical="20dp"
+                android:minWidth="250dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:text="@string/dont_receive_the_code"
+                android:textAlignment="center"
+                android:textColor="@color/colorText"
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/lwmo_resend_btn"
+                android:text="@string/resend_code"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</LinearLayout>
