--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorFieldBG"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,6 +13,7 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:background="@android:color/white"
             android:padding="16dp"
             android:minHeight="100dp"
             android:layout_marginBottom="16dp"
@@ -57,7 +59,6 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_marginTop="16dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
