--- a/app/src/main/res/layout/activity_change_mobile_otp.xml
+++ b/app/src/main/res/layout/activity_change_mobile_otp.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profile.edit.ChangeMobileOTPActivity">
+    tools:context=".profile.edit.mobile.ChangeMobileOTPActivity">
 
     <include layout="@layout/toolbar"/>
 
