--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/ac_holder"
                 android:textColor="@color/colorText"
                 android:justificationMode="inter_word"
+                android:text="@string/minus"
                 android:padding="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
