--- a/app/src/main/res/layout/fragment_analysis.xml
+++ b/app/src/main/res/layout/fragment_analysis.xml
@@ -16,6 +16,7 @@
             android:layout_marginHorizontal="16dp"
             android:textColor="@color/colorText"
             android:textAlignment="center"
+            android:textStyle="bold"
             android:text="@string/rska_note"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
