--- a/app/src/main/res/layout/layout_bs_emergency.xml
+++ b/app/src/main/res/layout/layout_bs_emergency.xml
@@ -79,7 +79,8 @@
             android:layout_marginHorizontal="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/app_name" />
+            android:contentDescription="@string/app_name"
+            app:tint="@color/common_google_signin_btn_text_dark_disabled"/>
 
     </RelativeLayout>
 
@@ -125,7 +126,8 @@
             android:layout_marginHorizontal="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/app_name" />
+            android:contentDescription="@string/app_name"
+            app:tint="@color/common_google_signin_btn_text_dark_disabled"/>
 
     </RelativeLayout>
 
@@ -171,7 +173,8 @@
             android:layout_marginHorizontal="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/app_name" />
+            android:contentDescription="@string/app_name"
+            app:tint="@color/common_google_signin_btn_text_dark_disabled"/>
 
     </RelativeLayout>
 
