--- a/app/src/main/res/layout/layout_donor.xml
+++ b/app/src/main/res/layout/layout_donor.xml
@@ -63,6 +63,7 @@
         android:layout_marginStart="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/app_name" />
+        android:contentDescription="@string/app_name"
+        app:tint="@color/common_google_signin_btn_text_dark_disabled"/>
 
 </RelativeLayout>
