--- a/app/src/main/res/layout/layout_menu_end_icon.xml
+++ b/app/src/main/res/layout/layout_menu_end_icon.xml
@@ -11,6 +11,7 @@
         android:src="@drawable/ic_arrow_right_16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tint="@color/common_google_signin_btn_text_dark_disabled"
         android:contentDescription="@string/app_name" />
 
 </LinearLayout>
