--- a/app/src/main/res/layout/layout_tips.xml
+++ b/app/src/main/res/layout/layout_tips.xml
@@ -29,7 +29,7 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/hpt_label"
-            android:text="@string/app_name"
+            android:text="@string/minus"
             android:paddingHorizontal="16dp"
             android:paddingVertical="8dp"
             android:layout_alignParentBottom="true"
@@ -37,6 +37,7 @@
             android:textStyle="bold"
             android:minLines="3"
             android:maxLines="3"
+            android:justificationMode="inter_word"
             android:textColor="@android:color/black"
             android:background="@android:color/white"
             android:layout_width="match_parent"
