--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -22,7 +22,7 @@
         android:textAlignment="center"
         android:textSize="24sp"
         android:layout_marginTop="16dp"
-        android:textStyle="bold|italic"
+        android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
