--- a/app/src/main/res/drawable/vpi_inactive.xml
+++ b/app/src/main/res/drawable/vpi_inactive.xml
@@ -6,7 +6,7 @@
             android:innerRadius="0dp"
             android:thickness="2dp"
             android:useLevel="false">
-            <solid android:color="@android:color/darker_gray" />
+            <solid android:color="@color/browser_actions_divider_color" />
         </shape>
     </item>
 </layer-list>
