--- a/app/src/main/res/layout/activity_login_with_mobile_otp.xml
+++ b/app/src/main/res/layout/activity_login_with_mobile_otp.xml
@@ -22,7 +22,7 @@
             <com.google.android.material.textview.MaterialTextView
                 android:text="@string/lwm_otp_title"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginVertical="32dp"
@@ -37,10 +37,10 @@
                 app:itemCount="6"
                 app:itemHeight="60dp"
                 app:itemSpacing="4dp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
                 app:lineColor="@android:color/transparent"
-                app:cursorColor="@color/colorPrimaryDark"
+                app:cursorColor="@color/colorPrimary"
                 android:cursorVisible="true"
                 android:itemBackground="@color/colorFieldBG"
                 app:itemRadius="16dp"
