--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,7 +78,7 @@
                 android:text="@string/common_prevention_tips"
                 android:textStyle="bold"
                 android:textSize="20sp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorPrimary"
                 android:paddingHorizontal="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -116,7 +116,7 @@
                     android:layout_toStartOf="@id/hdr_see_all"
                     android:textStyle="bold"
                     android:textSize="20sp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimary"
                     android:paddingHorizontal="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -137,7 +137,7 @@
                     android:layout_centerVertical="true"
                     android:textStyle="bold"
                     android:textSize="14sp"
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/colorPrimary"
                     android:paddingHorizontal="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
