--- a/app/src/main/res/layout/layout_chat_left_message.xml
+++ b/app/src/main/res/layout/layout_chat_left_message.xml
@@ -23,11 +23,11 @@
         android:layout_toEndOf="@id/convl_uphoto"
         android:layout_marginStart="8dp"
         android:background="@drawable/bg_chat_left"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:paddingVertical="8dp"
         android:paddingHorizontal="16dp"
         android:textSize="14sp"
-        android:text="@string/app_name"
+        android:text="@string/minus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
