--- a/app/src/main/res/layout/layout_chat_right_message.xml
+++ b/app/src/main/res/layout/layout_chat_right_message.xml
@@ -11,7 +11,7 @@
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/convr_message"
         android:background="@drawable/bg_chat_right"
-        android:text="@string/app_name"
+        android:text="@string/minus"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         android:paddingHorizontal="16dp"
