--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,12 +11,12 @@
         android:theme="@style/AppTheme.Toolbar"
         android:id="@+id/toolbar"
         app:title="@string/minus"
-        app:titleTextColor="@color/colorPrimaryDark"
+        app:titleTextColor="@color/colorPrimary"
         app:titleTextAppearance="@style/AppTheme.Toolbar.TitleText"
         app:subtitleTextColor="@android:color/secondary_text_light_nodisable"
         app:subtitleTextAppearance="@style/AppTheme.Toolbar.SubTitleText"
         app:navigationIcon="@drawable/ic_arrow_back_20"
-        app:navigationIconTint="@color/colorPrimaryDark"
+        app:navigationIconTint="@color/colorPrimary"
         app:contentInsetStartWithNavigation="0dp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
