--- a/app/src/main/res/drawable/ic_home_24.xml
+++ b/app/src/main/res/drawable/ic_home_24.xml
@@ -1,5 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="251.479"
-    android:viewportWidth="251.479" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-  <path android:fillColor="#FF000000" android:pathData="M209.355,135.551c-4.143,0 -7.5,3.358 -7.5,7.5v76.109H49.634v-76.109c0,-4.142 -3.357,-7.5 -7.5,-7.5c-4.143,0 -7.5,3.358 -7.5,7.5v83.609c0,4.142 3.357,7.5 7.5,7.5h167.221c4.143,0 7.5,-3.358 7.5,-7.5v-83.609C216.855,138.909 213.497,135.551 209.355,135.551z"/>
-  <path android:fillColor="#FF000000" android:pathData="M249.282,137.748L131.035,19.515c-2.928,-2.929 -7.677,-2.928 -10.606,0L2.197,137.748c-2.929,2.929 -2.929,7.678 0,10.606c1.465,1.464 3.385,2.197 5.304,2.197c1.92,0 3.839,-0.732 5.304,-2.197l112.929,-112.93l112.943,112.93c2.928,2.929 7.677,2.928 10.607,-0.001C252.211,145.425 252.211,140.676 249.282,137.748z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M23.121,9.069 L15.536,1.483a5.008,5.008 0,0 0,-7.072 0L0.879,9.069A2.978,2.978 0,0 0,0 11.19v9.817a3,3 0,0 0,3 3L21,24.007a3,3 0,0 0,3 -3L24,11.19A2.978,2.978 0,0 0,23.121 9.069ZM15,22.007L9,22.007L9,18.073a3,3 0,0 1,6 0ZM22,21.007a1,1 0,0 1,-1 1L17,22.007L17,18.073a5,5 0,0 0,-10 0v3.934L3,22.007a1,1 0,0 1,-1 -1L2,11.19a1.008,1.008 0,0 1,0.293 -0.707L9.878,2.9a3.008,3.008 0,0 1,4.244 0l7.585,7.586A1.008,1.008 0,0 1,22 11.19Z"/>
 </vector>
