--- a/app/src/main/res/drawable/ic_check_24.xml
+++ b/app/src/main/res/drawable/ic_check_24.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M18,0H6A1,1 0,0 0,6 2H7V19a5,5 0,0 0,10 0V2h1a1,1 0,0 0,0 -2ZM12,22a3,3 0,0 1,-3 -3V9h6V19A3,3 0,0 1,12 22ZM15,7H9V2h6Z"/>
+      android:pathData="M22.319,4.431 L8.5,18.249a1,1 0,0 1,-1.417 0L1.739,12.9a1,1 0,0 0,-1.417 0h0a1,1 0,0 0,0 1.417l5.346,5.345a3.008,3.008 0,0 0,4.25 0L23.736,5.847a1,1 0,0 0,0 -1.416h0A1,1 0,0 0,22.319 4.431Z"/>
 </vector>
