--- a/app/src/main/res/drawable/ic_menu_24.xml
+++ b/app/src/main/res/drawable/ic_menu_24.xml
@@ -1,6 +1,18 @@
-<vector android:height="24dp" android:viewportHeight="384.97"
-    android:viewportWidth="384.97" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-  <path android:fillColor="#FF000000" android:pathData="M12.03,120.303h360.909c6.641,0 12.03,-5.39 12.03,-12.03c0,-6.641 -5.39,-12.03 -12.03,-12.03H12.03c-6.641,0 -12.03,5.39 -12.03,12.03C0,114.913 5.39,120.303 12.03,120.303z"/>
-  <path android:fillColor="#FF000000" android:pathData="M372.939,180.455H12.03c-6.641,0 -12.03,5.39 -12.03,12.03s5.39,12.03 12.03,12.03h360.909c6.641,0 12.03,-5.39 12.03,-12.03S379.58,180.455 372.939,180.455z"/>
-  <path android:fillColor="#FF000000" android:pathData="M372.939,264.667H132.333c-6.641,0 -12.03,5.39 -12.03,12.03c0,6.641 5.39,12.03 12.03,12.03h240.606c6.641,0 12.03,-5.39 12.03,-12.03C384.97,270.056 379.58,264.667 372.939,264.667z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M1,6H23a1,1 0,0 0,0 -2H1A1,1 0,0 0,1 6Z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M23,9H9a1,1 0,0 0,0 2H23a1,1 0,0 0,0 -2Z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M23,19H9a1,1 0,0 0,0 2H23a1,1 0,0 0,0 -2Z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M23,14H1a1,1 0,0 0,0 2H23a1,1 0,0 0,0 -2Z"/>
 </vector>
