--- a/app/src/main/res/layout/layout_chat_user.xml
+++ b/app/src/main/res/layout/layout_chat_user.xml
@@ -45,7 +45,7 @@
             android:textStyle="bold"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
