--- a/app/src/main/res/menu/menu_account.xml
+++ b/app/src/main/res/menu/menu_account.xml
@@ -3,9 +3,11 @@
     <item
         android:id="@+id/mnue_profile"
         android:enabled="true"
+        android:icon="@drawable/ic_edit_24"
         android:title="@string/edit_profile"/>
     <item
         android:id="@+id/mnue_mobile"
         android:enabled="true"
+        android:icon="@drawable/ic_mobile_16"
         android:title="@string/change_mobile_number"/>
 </menu>
