--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,6 +89,9 @@
         <item name="itemTextColor">@color/colorText</item>
         <item name="elevation">0dp</item>
         <item name="android:overScrollMode">never</item>
+        <item name="itemIconSize">16dp</item>
+        <item name="itemIconPadding">24dp</item>
+        <item name="itemIconTint">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.NavigationView.Theme">
