--- a/app/src/main/res/drawable/gr_emergency.xml
+++ b/app/src/main/res/drawable/gr_emergency.xml
@@ -20,7 +20,7 @@
         android:fillColor="#FFFFFF"/>
     <path
         android:pathData="M397.164,129.653m-98.311,0a98.311,98.311 0,1 1,196.622 0a98.311,98.311 0,1 1,-196.622 0"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M389.202,132.005m-98.311,0a98.311,98.311 0,1 1,196.622 0a98.311,98.311 0,1 1,-196.622 0"
         android:strokeWidth="0.25"
@@ -309,14 +309,14 @@
         android:pathData="M300.69,257.119l-9.871,-36.239l-0.08,0v-8.712c0,-3.354 -2.719,-6.073 -6.073,-6.073h-14.061"
         android:strokeLineJoin="round"
         android:fillColor="#00000000"
-        android:strokeColor="#F3F5F4"
+        android:strokeColor="@color/colorAccent"
         android:strokeLineCap="round"/>
     <path
         android:strokeWidth="1"
         android:pathData="M290.818,220.881l9.871,36.239c1.127,4.139 -1.988,8.217 -6.278,8.217"
         android:strokeLineJoin="round"
         android:fillColor="#00000000"
-        android:strokeColor="#F3F5F4"
+        android:strokeColor="@color/colorAccent"
         android:strokeLineCap="round"/>
     <path
         android:pathData="M235.584,217.51c-0.011,0 -0.024,-0.001 -0.035,-0.001c-0.341,-0.019 -0.602,-0.311 -0.582,-0.651l1.695,-30.211c0.018,-0.34 0.307,-0.611 0.651,-0.582c0.341,0.019 0.602,0.311 0.582,0.651l-1.695,30.211C236.182,217.255 235.909,217.51 235.584,217.51z"
@@ -459,81 +459,81 @@
         android:fillColor="#E8DFCF"/>
     <path
         android:pathData="M40.381,349.879h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M55.756,342.331h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M47.19,371.578h1.206v5.031h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M51.46,356.341h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M58.049,399.407h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M74.487,354.572h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M40.381,387.545h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M41.639,409.04h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M52.961,386.395h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M16.288,387.417h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M22.069,378.026h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M24.725,392.449h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M59.111,367.212h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M77.003,374.093h1.206v5.032h-1.206z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M73.608,418.874h-49.22c-1.33,0 -2.355,1.171 -2.179,2.489l5.1,38.176c0.521,3.9 3.848,6.812 7.783,6.812h28.661c4,0 7.361,-3.007 7.804,-6.983l4.236,-38.053C75.938,420.014 74.919,418.874 73.608,418.874z"
-        android:fillColor="#F3F5F4"/>
+        android:fillColor="@color/colorAccent"/>
     <path
         android:pathData="M73.504,441.883l0.861,-7.737l-50.448,0l1.034,7.737z"
         android:fillColor="#70927F"/>
     <path
         android:pathData="M24.863,222.172m-12.208,0a12.208,12.208 0,1 1,24.416 0a12.208,12.208 0,1 1,-24.416 0"
         android:strokeWidth="0.25"
-        android:fillColor="#F3F5F4"
+        android:fillColor="@color/colorAccent"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M405.79,250.674m-12.208,0a12.208,12.208 0,1 1,24.416 0a12.208,12.208 0,1 1,-24.416 0"
         android:strokeWidth="0.25"
-        android:fillColor="#F3F5F4"
+        android:fillColor="@color/colorAccent"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M391.833,328.147m-6.104,0a6.104,6.104 0,1 1,12.208 0a6.104,6.104 0,1 1,-12.208 0"
         android:strokeWidth="0.25"
-        android:fillColor="#F3F5F4"
+        android:fillColor="@color/colorAccent"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M475.505,137.657l-4.698,19.322l-14.623,-14.624z"
         android:strokeWidth="0.25"
-        android:fillColor="#F3F5F4"
+        android:fillColor="@color/colorAccent"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M149.569,83.16l-16.985,10.34l0,-20.68z"
         android:strokeWidth="0.25"
-        android:fillColor="#F3F5F4"
+        android:fillColor="@color/colorAccent"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M476.708,322.043l-16.985,10.34l0,-20.68z"
         android:strokeWidth="0.25"
-        android:fillColor="#F3F5F4"
+        android:fillColor="@color/colorAccent"
         android:strokeColor="#70927F"/>
     <path
         android:pathData="M495.36,284.319h-80.639c-4.932,0 -8.93,-3.998 -8.93,-8.93v-15.951c0,-4.932 3.998,-8.93 8.93,-8.93h80.639c4.932,0 8.93,3.998 8.93,8.93v15.951C504.29,280.32 500.292,284.319 495.36,284.319z"
